# petrinet_plc_rust

./: .gitignore  Cargo.toml  README.md
backend/: Cargo.toml
backend/examples/: engine_bench.rs
backend/src/: bool_parser.rs  io_handler.rs  lib.rs  petri_net_handler.rs  petri_net_subcomponents.rs  run.rs  state_machine.rs  webserver_handler.rs
backend/tests/: web_interface.rs
bench/: py_engine_bench.py
frontend/: Cargo.toml  index.html
frontend/src/: debug_view.rs  ihm.rs  iomocker.rs  iopt.rs  main.rs  state.rs
frontend/style/: mystyle.css
protocol/: Cargo.toml
protocol/src/: lib.rs
