[package]
name = "petrinet_plc"
version = "0.1.0"
edition = "2021"

[lib]
name = "petrinet_plc"
path = "src/lib.rs"

[[bin]]
name = "petrinet_plc"
path = "src/run.rs"

[dependencies]
protocol = { path = "../protocol" }
axum = { version = "0.7.5", features = ["ws"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["fs", "cors"] }
tokio = { version = "1.34.0", features = ["full"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
rand = "0.8.5"
parking_lot = "0.12.1"
futures-util = "0.3.29"

[dev-dependencies]
protocol = { path = "../protocol" }
reqwest = { version = "0.11.23", features = ["json", "blocking"] }
tokio-tungstenite = "0.21.0"
futures-util = "0.3.29"
