[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
protocol = { path = "../protocol" }
leptos = { version = "0.6", features = ["csr"] }
leptos_router = { version = "0.6", features = ["csr"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
wasm-bindgen = "0.2.92"
js-sys = "0.3.69"
console_error_panic_hook = "0.1.7"

[dependencies.web-sys]
version = "0.3.69"
features = [
    "Window",
    "Document",
    "Location",
    "console",
    "WebSocket",
    "MessageEvent",
    "Event",
    "CloseEvent",
    "BinaryType",
    "Element",
    "HtmlElement",
    "HtmlInputElement",
    "HtmlButtonElement",
    "HtmlCanvasElement",
    "Node",
    "NodeList",
    "File",
    "FileList",
    "FileReader",
    "Blob",
    "DomParser",
    "SupportedType",
    "CanvasRenderingContext2d",
    "TextMetrics",
    "MouseEvent",
    "WheelEvent",
    "Storage",
    "DomRect",
]
